<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/topContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:paddingBottom="20dp">

        <RelativeLayout
            android:id="@+id/imgContainer"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp">

            <ImageView
                android:id="@+id/avatarIV"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/repoDetailsIVDescription"
                android:src="@drawable/dp_default" />

        </RelativeLayout>

        <TextView
            android:id="@+id/idTV"
            style="@style/repo_details_tv_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imgContainer"
            android:layout_centerHorizontal="true"
            android:text="@string/usename" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/followerContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/topContainer"
        android:orientation="horizontal"
        android:padding="2dp">

        <!--stargazer-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@color/colorPrimaryDark"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/stargazerCountTV"
                style="@style/repo_details_tv_counts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/stargazerLable"
                style="@style/repo_details_tv_lables"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/stargazerCount" />
        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/white" />

        <!--forks-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@color/colorPrimaryDark"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/forksCountTV"
                style="@style/repo_details_tv_counts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/forksCountLable"
                style="@style/repo_details_tv_lables"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/forks" />
        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/white" />

        <!--issues-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@color/colorPrimaryDark"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/issuesCountTV"
                style="@style/repo_details_tv_counts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/issuesCountLable"
                style="@style/repo_details_tv_lables"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/issues" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/followerContainer"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp"
        android:orientation="vertical">

        <!--name-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/repoNameLable"
                style="@style/repo_details_tv_lable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/repo_name" />

            <TextView
                android:id="@+id/repoNameTV"
                style="@style/repo_details_tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="15dp"
                android:background="@color/grey" />

        </LinearLayout>

        <!--description-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/repoDescriptionLable"
                style="@style/repo_details_tv_lable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/repo_description" />

            <TextView
                android:id="@+id/repoDescriptionTV"
                style="@style/repo_details_tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="15dp"
                android:background="@color/grey" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>